<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/solar_data_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_8">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mark_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mark_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_05"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mark_name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mark_lat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_05"
            android:text="@string/latitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mark_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mark_lat_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toStartOf="@id/solar_item_barrier"
            app:layout_constraintTop_toBottomOf="@id/mark_description"
            tools:text="12.345678" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mark_lon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_05"
            android:text="@string/longitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mark_lat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/intensity_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toStartOf="@id/solar_item_barrier"
            app:layout_constraintTop_toBottomOf="@id/mark_lat_val"
            tools:text="56.811261" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/solar_item_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="start"
            app:constraint_referenced_ids="edit_button, remove_button" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/edit_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_edit_24"
            app:layout_constraintBottom_toTopOf="@+id/remove_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.22"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintWidth_percent="0.13" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/remove_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintTop_toBottomOf="@+id/edit_button"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="0.13" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>